syntax = "proto3";
package message;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.example.pub";

message MessageRequest {
  string body = 1;
  string header = 2;
  string priority = 3;
}

message MessageResponse {
  string response = 1;
}

message Payload {
  string body = 1;
  string header = 2;
  string priority = 3;
}


service MessageService {

  // Client Stream
  rpc ReceiveMessage(MessageResponse) returns (stream MessageRequest);

  // Server Stream
  rpc SendMessage(google.protobuf.Empty) returns (stream MessageRequest);
}